//
//  Reddit_BrowserUITests.swift
//  Reddit BrowserUITests
//
//  Created by Andy Li on 3/12/17.
//  Copyright © 2017 Andy Li. All rights reserved.
//

import XCTest

class Reddit_BrowserUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testApplicationRun() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        XCUIDevice.shared().orientation = .portrait
        
        let app = XCUIApplication()
        app.navigationBars["Hot Posts"].buttons["Refresh"].tap()
        
        let tabBarsQuery = app.tabBars
        tabBarsQuery.buttons["New"].tap()
        app.navigationBars["New Posts"].buttons["Refresh"].tap()
        XCTAssertGreaterThanOrEqual(app.navigationBars.buttons.count, 1)
        tabBarsQuery.buttons["Top"].tap()
        app.navigationBars["Top Posts"].buttons["Refresh"].tap()
        
        let tablesQuery = app.tables
        tablesQuery.staticTexts["Guardians of the Front Page"].tap()
        XCTAssertGreaterThanOrEqual(tablesQuery.element.staticTexts.count, 1)

        
    }
}
